--- a/style.css
+++ b/style.css
@@ -1,30 +1,10 @@
-{ 
-    margin: 0; 
-    padding:0;
-    } 
-    
-    header {
-       background-color: #424e61;
-        color: white ;
-         display: flex;
-         justify-content: space-around;
-          align-items: center;
-          padding: 24px 0;
-     } 
-     
-     .cabecalho-imagem {
-         width: 20%
-}
+@import url("stylesheet/header.css");
 
-     .cabecalho-lista-item{
-         display: inline-block;
-          margin: 0 16px;
-           font-size: 24px;
-       } 
-    .escola-imagem{
-         width: 30%;
-    }
-     .escola{
-   background-image: linear-gradient(#424e61, #4ebf4e);
-         color: white; 
-    }
+:root {
+
+    --cor-de-fundo: --cor-de-fundo #ebecee;
+}
+body
+{
+    background-color: var(--cor-de-fundo);
+}
